refactor: Add GTD.Contract library and move Model to it

--- a/src/GettingThingsDone/GettingThingsDone.csproj
+++ b/src/GettingThingsDone/GettingThingsDone.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GettingThngsDone.Contracts\GettingThingsDone.Contract.csproj" />
+  </ItemGroup>
+
 </Project>
