--- a/src/GettingThingsDone.ApplicationCore/GettingThingsDone.ApplicationCore.csproj
+++ b/src/GettingThingsDone.ApplicationCore/GettingThingsDone.ApplicationCore.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DTO\" />
+    <ProjectReference Include="..\GettingThngsDone.Contracts\GettingThingsDone.Contract.csproj" />
   </ItemGroup>
 
 </Project>
