--- a/src/GettingThingsDone/GettingThingsDone.csproj
+++ b/src/GettingThingsDone/GettingThingsDone.csproj
@@ -21,6 +21,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GettingThingsDone.ApplicationCore\GettingThingsDone.ApplicationCore.csproj" />
+    <ProjectReference Include="..\GettingThingsDone.Infrastructure\GettingThingsDone.Infrastructure.csproj" />
     <ProjectReference Include="..\GettingThngsDone.Contracts\GettingThingsDone.Contract.csproj" />
   </ItemGroup>
 
