refactor: Rename Contract project to Contracts
To keep it consistent with the directory name which was Contracts.

--- a/src/GettingThingsDone.ApplicationCore/GettingThingsDone.ApplicationCore.csproj
+++ b/src/GettingThingsDone.ApplicationCore/GettingThingsDone.ApplicationCore.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GettingThingsDone.Contracts\GettingThingsDone.Contract.csproj" />
+    <ProjectReference Include="..\GettingThingsDone.Contracts\GettingThingsDone.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
