--- a/src/GettingThingsDone.WebApi/appsettings.json
+++ b/src/GettingThingsDone.WebApi/appsettings.json
@@ -1,8 +1,9 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SecurityKey": "zb488*377f6d&f£ww£fFdddFF33fssDG5!3"
 }
