--- a/src/GettingThingsDone.Contracts/GettingThingsDone.Contracts.csproj
+++ b/src/GettingThingsDone.Contracts/GettingThingsDone.Contracts.csproj
@@ -12,4 +12,8 @@
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+
 </Project>
