--- a/src/GettingThingsDone.WebApi/GettingThingsDone.WebApi.csproj
+++ b/src/GettingThingsDone.WebApi/GettingThingsDone.WebApi.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="JIL" Version="2.16.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="2.3.0" />
