--- a/src/GettingThingsDone.ApplicationCore/GettingThingsDone.ApplicationCore.csproj
+++ b/src/GettingThingsDone.ApplicationCore/GettingThingsDone.ApplicationCore.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Primitives" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="2.1.2" />
   </ItemGroup>
 
   <ItemGroup>
